@@ -1,3 +1,13 @@
+2008-07-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* resolv/res_send.c: Remove unnecessary res_pquery prototype.
+
+	* resolv/res_query.c (__libc_res_nquery): Issue debug message only
+	if DEBUG is defined.
+
+	* resolv/res_query.c (__libc_res_nquery): Align buffer for T_AAAA
+	query.  Adjust buffer size computation for padding.
+
 2008-07-08  Ulrich Drepper  <drepper@redhat.com>
 
 	* stdio-common/Makefile: Add rules to build and run tst-setvbuf1.
